--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
 
     <title>AOU GPA Calculator – Web-Based GPA Calculator for AOU Students</title>
 
@@ -543,3 +543,4 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
